Fixed font loading issues

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<title>Unhola</title>
 		<link rel="preload" href="https://fonts.gstatic.com/s/silkscreen/v4/m8JXjfVPf62XiF7kO-i9YLNlaw.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+		<link rel="preload" href="https://fonts.gstatic.com/s/silkscreen/v4/m8JXjfVPf62XiF7kO-i9YLNlaw700.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
