--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 		<div id="press-screen-page" class="page hidden">
 			<div class="container">press the screen</div>
 		</div>
-		<button class="hidden" id="jump-button"></button>
+		<div class="hidden" id="jump-button"></div>
+		<div class="joystick hidden">
+			<div class="stick"></div>
+		</div>
 		<button class="hidden" id="open-pause-menu-button">
 			<span>PAUSE</span> 
 			<span class="key">esc</span>
